header section done

--- a/index.html
+++ b/index.html
@@ -21,5 +21,53 @@
     />
     <title>Flower Market</title>
   </head>
-  <body></body>
+  <body>
+    <!-- header section -->
+
+    <header>
+      <nav class="navbar display-flex screen">
+        <div class="nav-logo">
+          <img src="assets/logo.png" alt="navigation logo" />
+        </div>
+        <div class="nav-links">
+          <ul class="nav-items display-flex">
+            <li class="nav-item">
+              <a class="nav-link" id="nav-link-1" href="$">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" #nav-link-2 href="$">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" #nav-link-2 href="$">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="$"
+                ><i class="fa-solid fa-cart-shopping"></i>Cart (56$)</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <!-- hero section -->\
+
+      <section class="hero screen display-flex">
+        <div class="hero-content">
+          <h2 class="hero-title">
+            ALWAYS <span>FRESH <br />FLOWERS</span>
+          </h2>
+          <p class="subtitle">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
+        <div class="hero-image">
+          <img src="assets/hero-flower.png" alt="" />
+        </div>
+      </section>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
