--- a/index.html
+++ b/index.html
@@ -67,7 +67,94 @@
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- our plants section -->
+
+      <section class="our-plants screen">
+        <div class="our-plants-contents display-flex">
+          <h3 class="title"><span>Our</span> Plants</h3>
+          <p class="subtitle">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From <br />classic roses to exotic blooms, we offer a
+            wide variety of fresh.
+          </p>
+        </div>
+        <div class="our-plant-images">
+          <div class="lily-flower-image">
+            <img
+              src="assets/sample-flower-image.png"
+              alt="sample flower image"
+            />
+            <h6 class="flower-title">Lily Blossom</h6>
+            <p class="flower-subtitle">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="lily-flower-image">
+            <img
+              src="assets/sample-flower-image.png"
+              alt="sample flower image"
+            />
+            <h6 class="flower-title">Lily Blossom</h6>
+            <p class="flower-subtitle">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="lily-flower-image">
+            <img
+              src="assets/sample-flower-image.png"
+              alt="sample flower image"
+            />
+            <h6 class="flower-title">Lily Blossom</h6>
+            <p class="flower-subtitle">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="lily-flower-image">
+            <img
+              src="assets/sample-flower-image.png"
+              alt="sample flower image"
+            />
+            <h6 class="flower-title">Lily Blossom</h6>
+            <p class="flower-subtitle">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="lily-flower-image">
+            <img
+              src="assets/sample-flower-image.png"
+              alt="sample flower image"
+            />
+            <h6 class="flower-title">Lily Blossom</h6>
+            <p class="flower-subtitle">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="lily-flower-image">
+            <img
+              src="assets/sample-flower-image.png"
+              alt="sample flower image"
+            />
+            <h6 class="flower-title">Lily Blossom</h6>
+            <p class="flower-subtitle">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="lily-flower-image">
+            <img
+              src="assets/sample-flower-image.png"
+              alt="sample flower image"
+            />
+            <h6 class="flower-title">Lily Blossom</h6>
+            <p class="flower-subtitle">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+          <div class="lily-flower-image">
+            <img
+              src="assets/sample-flower-image.png"
+              alt="sample flower image"
+            />
+            <h6 class="flower-title">Lily Blossom</h6>
+            <p class="flower-subtitle">20 USD</p>
+            <button class="btn-primary">ADD TO CART</button>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
