flower and plant lovers section done

--- a/index.html
+++ b/index.html
@@ -154,6 +154,38 @@
           </div>
         </div>
       </section>
+
+      <!-- flower & plant lover section -->
+
+      <section class="plant-lover display-flex screen">
+        <div class="plant-image">
+          <img src="assets/flower-store.png" alt="flower store image" />
+        </div>
+        <div class="plant-contents">
+          <img src="assets/trusted-badge.png" alt="trusted badge" />
+          <h3 class="title">
+            Flower & Plants <br />
+            Lover
+          </h3>
+          <ul class="subtitle">
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
