--- a/index.html
+++ b/index.html
@@ -186,7 +186,77 @@
           </ul>
         </div>
       </section>
+
+      <!-- latest deal section  -->
+
+      <!-- <section class="deal-section screen">
+        <div class="deal-contents">
+          <h3 class="title"><span>Latest</span> Deals</h3>
+          <p class="subtitle">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. <br />From classic roses to exotic blooms, we offer a
+            wide variety of fresh.
+          </p>
+        </div>
+        <div class="deals display-flex">
+          <div class="deal-card">
+            <img src="assets/deal-bloom.png" alt="Bloom Plant" />
+            <div class="deal-text">
+              <h2>60% Off | Bloom Plant</h2>
+              <p>Shop Now</p>
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+          <div class="deal-card">
+            <img src="assets/deal-ana.png" alt="Ana Plant" />
+            <div class="deal-text">
+              <h2>30% Off | Ana Plant</h2>
+              <p>Shop Now</p>
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+          <div class="deal-card">
+            <img src="assets/deal-zabo.png" alt="Zabo Plant" />
+            <div class="deal-text">
+              <h2>25% Off | Zabo Plant</h2>
+              <p>Shop Now</p>
+              <a href="#">Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </section> -->
+      <!-- <div class="mini">
+            <div class="mini-card-1">
+              <h4>60% Off | Bloom Plant</h4>
+              <a href="$">Shop Now</a>
+            </div>
+            <div class="mini-card-2">
+              <h4>30% Off | Ana Plant</h4>
+              <a href="$">Shop Now</a>
+            </div>
+          </div>
+          <div class="max">
+            <h4>25% Off | Zabo Plant</h4>
+            <a href="$">Shop Now</a>
+          </div> -->
+
+      <!-- join the bunch section -->
+      <section class="join-section display-flex">
+        <h3 class="title">Join The Bunch</h3>
+
+        <form>
+          <label for="email"></label>
+          <input
+            type="email"
+            placeholder="        Write email"
+            id="email"
+            name="email"
+          />
+          <input id="submit" type="submit" value="Subscribe" />
+        </form>
+      </section>
     </main>
+
     <footer></footer>
   </body>
 </html>
