footer section done and join the bunch section corrected

--- a/index.html
+++ b/index.html
@@ -245,18 +245,55 @@
         <h3 class="title">Join The Bunch</h3>
 
         <form>
-          <label for="email"></label>
-          <input
-            type="email"
-            placeholder="        Write email"
-            id="email"
-            name="email"
-          />
-          <input id="submit" type="submit" value="Subscribe" />
+          <div class="form">
+            <label for="email"></label>
+            <input
+              type="email"
+              placeholder="        Write email"
+              id="email"
+              name="email"
+            />
+            <input id="submit" type="submit" value="Subscribe" />
+          </div>
         </form>
       </section>
     </main>
 
-    <footer></footer>
+    <!-- footer section  -->
+
+    <footer class="footer screen display-flex">
+      <div class="foot-content">
+        <img class="foot-logo" src="assets/logo.png" alt="footer logo" />
+        <p class="subtitle">
+          Indulge your senses with the <br />
+          beauty and fragrance of our fresh <br />
+          flower shop.
+        </p>
+      </div>
+      <div class="footer-link">
+        <ul class="foot-links">
+          <li class="foot-link"><a href="#">Home</a></li>
+          <li class="foot-link"><a href="#">About Us</a></li>
+          <li class="foot-link"><a href="#">Blog</a></li>
+          <li class="foot-link"><a href="#">FAQ</a></li>
+          <li class="foot-link"><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="footer-link">
+        <ul class="foot-links">
+          <li class="foot-link"><a href="#">Features</a></li>
+          <li class="foot-link"><a href="#">Pricing</a></li>
+          <li class="foot-link"><a href="#">Privacy Policy</a></li>
+          <li class="foot-link"><a href="#">Terms of Service</a></li>
+          <li class="foot-link"><a href="#">Help Center</a></li>
+        </ul>
+      </div>
+      <div class="foot-icon display-flex">
+        <img src="assets/icon-facebook.png" alt="facebook" />
+        <img src="assets/icon-twitter.png" alt="twitter" />
+        <img src="assets/icon-linkedin.png" alt="linkedin" />
+        <img src="assets/icon-youtube.png" alt="youtube" />
+      </div>
+    </footer>
   </body>
 </html>
