--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@
         </ul>
       </div>
       <div class="foot-icon display-flex">
-        <img src="assets/icon-facebook.png" alt="facebook" />
-        <img src="assets/icon-twitter.png" alt="twitter" />
-        <img src="assets/icon-linkedin.png" alt="linkedin" />
-        <img src="assets/icon-youtube.png" alt="youtube" />
+        <a href="#"><img src="assets/icon-facebook.png" alt="facebook" /></a>
+        <a href="#"><img src="assets/icon-twitter.png" alt="twitter" /></a>
+        <a href="#"><img src="assets/icon-linkedin.png" alt="linkedin" /></a>
+        <a href="#"><img src="assets/icon-youtube.png" alt="youtube" /></a>
       </div>
     </footer>
   </body>
