latest deal section completed

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
       <!-- latest deal section  -->
 
-      <!-- <section class="deal-section screen">
+      <section class="deal-section screen">
         <div class="deal-contents">
           <h3 class="title"><span>Latest</span> Deals</h3>
           <p class="subtitle">
@@ -198,47 +198,23 @@
             wide variety of fresh.
           </p>
         </div>
-        <div class="deals display-flex">
-          <div class="deal-card">
-            <img src="assets/deal-bloom.png" alt="Bloom Plant" />
-            <div class="deal-text">
-              <h2>60% Off | Bloom Plant</h2>
-              <p>Shop Now</p>
-              <a href="#">Buy Now</a>
-            </div>
-          </div>
-          <div class="deal-card">
-            <img src="assets/deal-ana.png" alt="Ana Plant" />
-            <div class="deal-text">
-              <h2>30% Off | Ana Plant</h2>
-              <p>Shop Now</p>
-              <a href="#">Buy Now</a>
-            </div>
-          </div>
-          <div class="deal-card">
-            <img src="assets/deal-zabo.png" alt="Zabo Plant" />
-            <div class="deal-text">
-              <h2>25% Off | Zabo Plant</h2>
-              <p>Shop Now</p>
-              <a href="#">Buy Now</a>
-            </div>
-          </div>
-        </div>
-      </section> -->
-      <!-- <div class="mini">
-            <div class="mini-card-1">
+        <div class="deal-flex display-flex">
+          <div class="mini screen display-flex">
+            <div class="mini-card-1 display-flex">
               <h4>60% Off | Bloom Plant</h4>
               <a href="$">Shop Now</a>
             </div>
-            <div class="mini-card-2">
+            <div class="mini-card-2 display-flex">
               <h4>30% Off | Ana Plant</h4>
               <a href="$">Shop Now</a>
             </div>
           </div>
-          <div class="max">
+          <div class="max display-flex">
             <h4>25% Off | Zabo Plant</h4>
             <a href="$">Shop Now</a>
-          </div> -->
+          </div>
+        </div>
+      </section>
 
       <!-- join the bunch section -->
       <section class="join-section display-flex">
