--- a/index.html
+++ b/index.html
@@ -32,13 +32,19 @@
         <div class="nav-links">
           <ul class="nav-items display-flex">
             <li class="nav-item">
-              <a class="nav-link" id="nav-link-1" href="$">Home</a>
+              <a class="nav-link nav-display-none" id="nav-link-1" href="$"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" #nav-link-2 href="$">Shop</a>
+              <a class="nav-link nav-display-none" id="nav-link-2" href="$"
+                >Shop</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" #nav-link-2 href="$">About Us</a>
+              <a class="nav-link nav-display-none" id="nav-link-2" href="$"
+                >About Us</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="$"
