responsive done finally

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         </div>
       </nav>
 
-      <!-- hero section -->\
+      <!-- hero section -->
 
       <section class="hero screen display-flex">
         <div class="hero-content">
           <h2 class="hero-title">
             ALWAYS <span>FRESH <br />FLOWERS</span>
           </h2>
-          <p class="subtitle">
+          <p class="subtitle" id="hero-content-paragraph">
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. From classic roses to exotic blooms, we offer a wide
             variety of fresh flowers that are perfect for any occasion.
@@ -73,6 +73,7 @@
         </div>
       </section>
     </header>
+
     <main>
       <!-- our plants section -->
 
@@ -85,6 +86,7 @@
             wide variety of fresh.
           </p>
         </div>
+
         <div class="our-plant-images">
           <div class="lily-flower-image">
             <img
