--- a/index.html
+++ b/index.html
@@ -167,7 +167,11 @@
 
       <section class="plant-lover display-flex screen">
         <div class="plant-image">
-          <img src="assets/flower-store.png" alt="flower store image" />
+          <img
+            class="store-img"
+            src="assets/flower-store.png"
+            alt="flower store image"
+          />
         </div>
         <div class="plant-contents">
           <img src="assets/trusted-badge.png" alt="trusted badge" />
@@ -175,7 +179,7 @@
             Flower & Plants <br />
             Lover
           </h3>
-          <ul class="subtitle">
+          <ul id="plant-ul" class="subtitle">
             <li>
               Indulge your senses with the beauty and fragrance of our fresh
               flower shop. From classic roses to exotic blooms, we offer a wide
